# BigData-Graphs-Evo-CA-Classroom

./: .gitattributes  404.html  CITATION.cff  README.md  _redirects  demos.json  index.html  konigsberg2.html  konigsberg_equivalente.html  konisgberg_escenarios.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: requirements.txt
.github/workflows/: deploy.yml  manifest.yml  mkdocs.yml  pages.yml  tests.yml
.github/workflows/.github/workflows/: .gitignore  mkdocs.yml  pages.yml
BigData-Graphs-Evo-CA-Classroom/: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
BigData-Graphs-Evo-CA-Classroom/datasets/: grid_50x50.npz  karate.csv  tsp_50_cities.csv
BigData-Graphs-Evo-CA-Classroom/docs/: index.md  schedule.md  syllabus.md
BigData-Graphs-Evo-CA-Classroom/docs/modules/: 01-bigdata.md  02-graphs.md  03-evolutionary.md  04-cellular-automata.md
BigData-Graphs-Evo-CA-Classroom/notebooks/: 01_BigData_Intro.ipynb  02_Graphs_Fundamentals.ipynb
BigData-Graphs-Evo-CA-Classroom/src/classroom/: __init__.py
BigData-Graphs-Evo-CA-Classroom/src/classroom/bigdata/: sampling.py  spark_utils.py
BigData-Graphs-Evo-CA-Classroom/src/classroom/ca/: elementary.py  game_of_life.py
BigData-Graphs-Evo-CA-Classroom/src/classroom/evo/: ga_tsp.py  selection.py
BigData-Graphs-Evo-CA-Classroom/src/classroom/graphs/: link_prediction.py  spectral.py  traversal.py
BigData-Graphs-Evo-CA-Classroom/src/classroom/graphs /notebooks/: Gráfico_de_cuadrícula_.ipynb
BigData-Graphs-Evo-CA-Classroom/src/classroom/graphs/notebooks/: Gráfico_de_cuadrícula_.ipynb
BigData-Graphs-Evo-CA-Classroom/tests/: test_ca.py
datasets/: grid_50x50.npz  karate.csv  tsp_50_cities.csv
docs/: index.md  schedule.md  syllabus.md
docs/modules/: 01-bigdata.md  02-graphs.md  03-evolutionary.md  04-cellular-automata.md
gallery/: index.html
gallery/modelo-erdos-renyi/: index.html
notebooks/: 01_BigData_Intro.ipynb  02_Graphs_Fundamentals.ipynb  03_Evolutionary_Algorithms.ipynb  04_Cellular_Automata.ipynb
scripts/: gen_html_gallery.py
scripts/scripts/: gen_html_gallery.py
search/: search_index.json
src/classroom/: __init__.py
src/classroom/bigdata/: README.md  __init__.py  notebooks  python  sampling.py  spark_utils.py
src/classroom/bigdata/recursos/: Arquitectura de BBDD como un Sistema de Grafos.completo.html  De la Rigidez a la Elasticidad.html  tipos_de_hash.html
src/classroom/ca/: README.md  __init__.py  elementary.py  game_of_life.py
src/classroom/evo/: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  ga_tsp.py  operators.py  pyproject.toml  utils.py
src/classroom/evo/.github/workflows/: ci.yml
src/classroom/evo/problems/: tsp.py
src/classroom/evo/pyhton/: algoritmo_genético_y_el_problema_del_viajante.py
src/classroom/evo/tests/: test_operators.py
src/classroom/graphs/: README.md  __init__.py  ejemplo.py  link_prediction.py  notebooks  python  recursos  spectral.py  traversal.py
src/classroom/graphs/notebooks/: Gráfico_de_cuadrícula_.ipynb  Los_puentes_de_Königsberg_y_el_teorema_de_apretón_de_manos.ipynb
src/classroom/graphs/python/: Big_Data_Algoritmo_de_Dijkstra_y_el_BiG_Data_Parte_segunda_ipynb.ipynb  Dijkstra_ipynb.ipynb  Grafo_del_infinito_.ipynb
src/classroom/graphs/recursos/: 2.Grafos_regulares.html  3.Grafos_ Irregulares.html  Algoritmo_Genetico_Cuestionario_Algoritmo Genético.html  Algoritmo_Genético_Optimización en Big Data y Machine Learning.html  Algoritmo_Genético_Simulación.html  Algoritmos_Genéticos Introducción.html  Alogritmo_Genetico_Optimización y Complejidad.html  AlphaEvolve Descubrimiento de Algoritmos.html  Análisis de Rendimiento en GPU con Grafos_irregulares.html  D16.html  (+173 more)
test/:  test_ga_tsp.py
tests/: test_ca.py  test_evo.py  test_ga_tsp.py  test_graphs.py  test_notebooks.py  test_operators.py
tools/: build-demos-manifest.mjs
topics/graphs/: README.md
topics/graphs/recursos/: bibliografia.md  datasets.md
