[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom"
version = "0.1.0"
description = "Material y paquetes: classroom.evo, classroom.graphs, classroom.bigdata, classroom.ca"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "matplotlib", "scipy"]

[project.optional-dependencies]
evo = ["deap", "pymoo", "cmaes"]
dev = ["pytest", "pre-commit"]

[project.scripts]
# si tienes main() en GA TSP
evo-tsp = "classroom.evo.ga_tsp:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["classroom*"]

