[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom"
version = "0.1.0"
description = "Material y paquetes: classroom.evo, classroom.graphs, classroom.bigdata, classroom.ca"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
]

[project.optional-dependencies]
# extras: pip install -e .[evo]
evo = ["deap", "pymoo", "cmaes"]
# desarrollo: pip install -e .[dev]
dev = ["pytest", "pre-commit"]

[project.scripts]
# requiere def main() en src/classroom/evo/ga_tsp.py
evo-tsp = "classroom.evo.ga_tsp:main"

[tool.setuptools.packages.find]
# descubre paquetes bajo src/
where = ["src"]
include = ["classroom*"]

[tool.pytest.ini_options]
# para que pytest mire tests/ en la raíz
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
